<resources>
    <string name="app_name">VapeShop</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Пароль</string>
    <string name="login_button">Войти</string>
    <string name="register_button">Зарегистрироваться</string>

    <string name="error_invalid_email">Неправильный формат email адреса</string>
    <string name="error_password_short">Длина пароля должна быть не менее 6 символов</string>
    <string name="error_default">Произошла непредвиденная ошибка</string>
    <string name="error_network">Ошибка сетевого подключения</string>
    <string name="error_load">Ошибка загрузки данных</string>
    <string name="error_invalid_credentials">Неверный адрес электронной почты или пароль</string>
    <string name="error_user_not_found">Пользователь не найден</string>
    <string name="error_save_user">Не удалось сохранить данные пользователя.</string>

    <string name="hint_search">Поиск</string>

    <string name="sign_out_title">Выход из аккаунта</string>
    <string name="sign_out_message">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="go_to_auth_button">Авторизоваться</string>
    <string name="un_authorized_message">Вы не вошли в аккаунт</string>

    <string name="profile_email_label">Адрес электронной почты: %1$s</string>
    <string name="profile_orders_button">Мои заказы</string>
    <string name="profile_settings_button">Настройки</string>
    <string name="button_logout">Выход</string>

    <string name="confirm">Подтвердить</string>
    <string name="cancel">Отменить</string>

    <string name="bottom_menu_shop">Магазин</string>
    <string name="bottom_menu_cart">Корзина</string>
    <string name="bottom_menu_profile">Профиль</string>

    <string name="not_available_product">Нет в наличии</string>

    <string name="checkout">Оформить заказ</string>

    <string name="empty_cart">Корзина пуста</string>
    <string name="button_go_to_shop">Перейти к покупкам</string>
    <string name="button_retry">Попробовать ещё раз</string>
    <string name="total">Итого:</string>

    <string name="empty_product_list">В этой категории ещё нет товаров</string>
    <string name="button_go_back">Вернуться назад</string>

    <string name="authorization_dialog_title">Вы не авторизованы</string>
    <string name="authorization_dialog_message">Для оформления заказа необходимо авторизоваться</string>
    <string name="authorization_dialog_confirm">Авторизоваться"</string>
    <string name="checkout_title">Оформление заказа</string>
    <string name="checkout_delivery_title">Способ получения</string>
    <string name="checkout_courier">Курьер</string>
    <string name="checkout_pickup">Самовывоз</string>
    <string name="checkout_pickup_address">Пункт выдачи</string>
    <string name="checkout_delivery_address">Адрес доставки</string>
    <string name="checkout_delivery_hint">Выбрать адресс</string>
    <string name="delivery_address_error">Выберите адрес доставки</string>
    <string name="select_new_address">Выбрать новый адресс</string>
    <string name="checkout_payment_title">Способ оплаты</string>
    <string name="checkout_payment_online">Онлайн</string>
    <string name="checkout_payment_pickup">При получении</string>
    <string name="checkout_products_title">Товары в заказе</string>
    <string name="checkout_place_order">Оформить заказ</string>
    <string name="total_price">Итого: %1$.2f₽</string>"
    <string name="delivery_method_error">Выберите способ доставки</string>
    <string name="payment_method_error">Выберите способ оплаты</string>
    <string name="order_success">Заказ успешно оформлен</string>
    <string name="order_failed">Произошла ошибка при оформлении заказа: </string>
    <string name="pickup_point_error">Выберите пункт выдачи</string>
    <string name="online_payment_dialog_title">Оплата онлайн</string>
    <string name="online_payment_dialog_message">Оплата на сумму: %1$.2f₽</string>
    <string name="online_payment_dialog_confirm">Оплатить</string>
    <string name="quantity_multiplier">x</string>

    <string name="empty_orders">У вас ещё не было заказов</string>
    <string name="order_id">Номер заказа: \n%1$s</string>
    <string name="order_date">От: %1$s</string>
    <string name="processing_order_status">В ОБРАБОТКЕ</string>
    <string name="shipped_order_status">ОТПРАВЛЕН</string>
    <string name="delivered_order_status">ПОЛУЧЕН</string>
    <string name="cancelled_order_status">ОТМЕНЁН</string>
    <string name="pending_order_status">В ОЖИДАНИИ</string>
    <string name="order_total_price">Сумма заказа: %1$s</string>
    <string name="order_delivery">Доставка</string>
    <string name="order_pickup">Самовывоз</string>

    <string name="hint_profile_settings_name">Имя</string>
    <string name="hint_profile_settings_lastname">Фамилия</string>
    <string name="hint_profile_settings_phone_number">Номер телефона</string>
    <string name="hint_profile_settings_address">Адрес</string>
    <string name="profile_settings_save_button">Сохранить</string>
    <string name="profile_photo_click">Изменение фото профиля пока недоступно</string>
    <string name="profile_settings_success">Данные успешно сохранены</string>

    <string name="save_address_button">Сохранить адрес</string>
    <string name="address_hint">Адрес</string>
    <string name="incorrect_address_error">Выберите корректный адрес</string>
    <string name="no_apartment_error">Введите номер дома</string>
</resources>